Code style issues
* brackets for single statement blocks
* final fields
* default modifiers (for enums, interface functions)
* C Style Arrays